@@ -31,7 +31,7 @@ rm -Rf "samples/client/petstore/elixir/lib/swagger_petstore/model/"
 rm -Rf "samples/client/petstore/elixir/lib/swagger_petstore/lib/"
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 args="generate -t modules/openapi-generator/src/main/resources/elixir -i modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml -g elixir -o samples/client/petstore/elixir/ $@"
 
 java $JAVA_OPTS -jar $executable $args
